# RpiPtyhonLib

./: .gitignore  pyproject.toml
rpi_artic_lib/GPIO/: initGPIO.py  inout.py  port.py
test/: testOnTB2.py  testPinout.py
