[tool.poetry]
name = "rpi-artic-lib"
version = "0.1.0"
description = "Python library that includes my standar python library and a set of modules exclusive to the Raspberry PI"
authors = ["Artic42 <main@artic42.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
articlib = "^0.2.3"
rpi-gpio = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
